codegen/src/pascalGO/grammar/PascalGO.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PascalGO.java */
        package pascalGO.grammar;

        /* Imports */
        import pascalGO.table.*;

        public class PascalGO/*@bgen(jjtree)*/implements PascalGOTreeConstants, PascalGOConstants {/*@bgen(jjtree)*/
  protected static JJTPascalGOState jjtree = new JJTPascalGOState();private static SymbolTable symbolTable = new SymbolTable();

                public static void main (String[] argum) throws ParseException
                {

                  SimpleNode tree = null;
                        try{
                                PascalGO analizador = new PascalGO(System.in);
                                //Llamar al metodo que reconoce la primera expresion del sintactico
                                tree = analizador.start();
                                IntermediateCodeGenerator visitor = new IntermediateCodeGenerator();
                                //visitor.visit(tree,null);
                                tree.dump("");
                                //Mensajes de salida como exito
                                //System.out.println("Todo ha ido bien");		
                        }catch(ParseException error){
                                  int[][] expectedTokens = error.expectedTokenSequences;
                                  System.out.println("Error en "+PascalGO.token.beginLine+","+PascalGO.token.beginColumn);
                                  System.out.print("Se esperaba: ");
                                  for (int i = 0; i < expectedTokens.length; i++) {
                                        for (int j = 0; j < expectedTokens[i].length; j++) {
                                                System.out.println(tokenImage[expectedTokens[i][j]]+' ');
                                          }
                                  }
                                  System.out.println("Y se ha recibido: "+error.currentToken.next.image);
                                  //tree.dump("");			   			  
                        }catch(Exception error){
                                error.printStackTrace();
                        }
                }

/* Seccion de sintaxis */
  static final public SimpleNode start() throws ParseException {
         /*@bgen(jjtree) Programa */
  NodePrograma jjtn000 = new NodePrograma(JJTPROGRAMA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      programaCompleto();
                  jjtree.closeNodeScope(jjtn000, true);
                  jjtc000 = false;
                        {if (true) return jjtn000 ;}
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void programaCompleto() throws ParseException {
    programa();
    jj_consume_token(PUNTO);
  }

        /* Regla 1 */
  static final public void programa() throws ParseException {
    jj_consume_token(PROGRAM);
    jj_consume_token(ID);
    jj_consume_token(PUNTOYCOMA);
    bloque();
  }

        /* Regla 2 */
  static final public void bloque() throws ParseException {
    declaracion();
    grupoSent();
  }

        /* Regla 3 */
  static final public void declaracion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONST:
      defCte();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TYPE:
      defTip();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      defVar();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PROCEDURE:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      defSubpr();
    }
  }

        /* Regla 4 */
  static final public void defCte() throws ParseException {
    jj_consume_token(CONST);
    label_2:
    while (true) {
      unaConst();
      jj_consume_token(PUNTOYCOMA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
    }
  }

        /* Regla 5 */
  static final public void unaConst() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(IGUAL);
    constante();
  }

        /* Regla 6 */
  static final public void defTip() throws ParseException {
    jj_consume_token(TYPE);
    label_3:
    while (true) {
      untipo();
      jj_consume_token(PUNTOYCOMA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
    }
  }

        /* Regla 7 */
  static final public void untipo() throws ParseException {
    jj_consume_token(ID);
    tipoEstr();
  }

        /* Regla 8 */
  static final public void tipoEstr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ARRAY:
      estrTab();
      break;
    case RECORD:
      estrReg();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

        /* Regla 10 */
  static final public void estrTab() throws ParseException {
    jj_consume_token(ARRAY);
    jj_consume_token(CORCHETEIZ);
    constante();
    jj_consume_token(RANGO);
    constante();
    jj_consume_token(CORCHETEDE);
    jj_consume_token(OF);
    jj_consume_token(ID);
  }

        /* Regla 11 */
  static final public void estrReg() throws ParseException {
    jj_consume_token(RECORD);
    listaVar();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      listaVar();
      jj_consume_token(PUNTOYCOMA);
    }
    jj_consume_token(END);
  }

        /* Regla 12 */
  static final public void defVar() throws ParseException {
    jj_consume_token(VAR);
    label_5:
    while (true) {
      listaVar();
      jj_consume_token(PUNTOYCOMA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
    }
  }

        /* Regla 13 */
  static final public void defSubpr() throws ParseException {
         /*@bgen(jjtree) Procedure */
  NodeProcedure jjtn000 = new NodeProcedure(JJTPROCEDURE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PROCEDURE);
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARENTESISIZ:
        jj_consume_token(PARENTESISIZ);
        parFormales();
        jj_consume_token(DOSPUNTOS);
        jj_consume_token(PARENTESISDE);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(PUNTOYCOMA);
      bloque();
      jj_consume_token(PUNTOYCOMA);
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

        /* Regla 14 */
  static final public void parFormales() throws ParseException {
    listaParam();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUNTOYCOMA:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_6;
      }
      jj_consume_token(PUNTOYCOMA);
      listaParam();
    }
  }

        /* Regla 15 */
  static final public void listaParam() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      jj_consume_token(VAR);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    listaVar();
  }

        /* Regla 16 */
  static final public void listaVar() throws ParseException {
    jj_consume_token(ID);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMA);
      jj_consume_token(ID);
    }
    jj_consume_token(DOSPUNTOS);
    jj_consume_token(ID);
  }

        /* Regla 17 */
  static final public void grupoSent() throws ParseException {
    jj_consume_token(BEGIN);
    sentencia();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUNTOYCOMA:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_8;
      }
      jj_consume_token(PUNTOYCOMA);
      sentencia();
    }
    jj_consume_token(END);
  }

        /* Regla 18 */
  static final public void sentencia() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BEGIN:
    case IF:
    case WHILE:
    case ID:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        asignLlamada();
        break;
      case IF:
        condicional();
        break;
      case WHILE:
        ciclica();
        break;
      case BEGIN:
        grupoSent();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

        /* Regla 23 */
  static final public void asignLlamada() throws ParseException {
         /*@bgen(jjtree) Asignement */
  NodeAsignement jjtn000 = new NodeAsignement(JJTASIGNEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      identifier();
      restoAsignLlam();
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

        /* Regla 24 */
  static final public void restoAsignLlam() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASIGNACION:
    case PARENTESISIZ:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASIGNACION:
        jj_consume_token(ASIGNACION);
        expresion();
        break;
      case PARENTESISIZ:
        jj_consume_token(PARENTESISIZ);
        parLlamada();
        jj_consume_token(PARENTESISDE);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

        /* Regla 27 */
  static final public void condicional() throws ParseException {
         /*@bgen(jjtree) Conditional */
  NodeConditional jjtn000 = new NodeConditional(JJTCONDITIONAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      expresion();
      jj_consume_token(THEN);
      sentencia();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        sentencia();
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

        /* Regla 28 */
  static final public void ciclica() throws ParseException {
         /*@bgen(jjtree) Loop */
  NodeLoop jjtn000 = new NodeLoop(JJTLOOP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      expresion();
      jj_consume_token(DO);
      sentencia();
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

        /* Regla 29 */
  static final public void parLlamada() throws ParseException {
    expresion();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMA:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
      jj_consume_token(COMA);
      expresion();
    }
  }

        /* Regla 30 */
  static final public void expresion() throws ParseException {
    exprSimple();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAYOR:
    case MAYORIG:
    case MENOR:
    case MENORIG:
    case IGUAL:
    case DESIGUAL:
      opRel();
      exprSimple();
                          Node exp1,op,exp2;
                          exp2 = jjtree.popNode();
                          op   = jjtree.popNode();
                          exp1 = jjtree.popNode();
                          op.jjtAddChild(exp1,0);
                          op.jjtAddChild(exp2,1);
                          jjtree.pushNode(op);
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
  }

        /* Regla 31 */
  static final public void exprSimple() throws ParseException {
                Node unaryOp = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUMA:
    case RESTA:
      signo();
                          unaryOp = jjtree.popNode();
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    termino();
                        if(unaryOp != null){
                                unaryOp.jjtAddChild(jjtree.popNode(),0);
                                jjtree.pushNode(unaryOp);
                        }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
      case SUMA:
      case RESTA:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_10;
      }
      opAdt();
      termino();
                                  Node term1,op,term2;
                                  term2 = jjtree.popNode();
                                  op    = jjtree.popNode();
                                  term1 = jjtree.popNode();
                                  op.jjtAddChild(term1,0);
                                  op.jjtAddChild(term2,1);
                                  jjtree.pushNode(op);
    }
  }

        /* Regla 32 */
  static final public void termino() throws ParseException {
    factor();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case DIV:
      case MOD:
      case MULT:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_11;
      }
      opMul();
      factor();
                                  Node fac1,op,fac2;
                                  fac2 = jjtree.popNode();
                                  op    = jjtree.popNode();
                                  fac1 = jjtree.popNode();
                                  op.jjtAddChild(fac1,0);
                                  op.jjtAddChild(fac2,1);
                                  jjtree.pushNode(op);
    }
  }

        /* Regla 33 */
  static final public void factor() throws ParseException {
                Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CTE:
      t = jj_consume_token(CTE);
                          NodeConstant jjtn001 = new NodeConstant(JJTCONSTANT);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
      try {
                          jjtree.closeNodeScope(jjtn001, true);
                          jjtc001 = false;
                         jjtn001.jjtSetValue(t.image);
      } finally {
                          if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001, true);
                          }
      }
      break;
    case ID:
      identifier();
      break;
    case NOT:
      jj_consume_token(NOT);
                          NodeNegacion jjtn002 = new NodeNegacion(JJTNEGACION);
                          boolean jjtc002 = true;
                          jjtree.openNodeScope(jjtn002);
      try {
        factor();
      } catch (Throwable jjte002) {
                          if (jjtc002) {
                            jjtree.clearNodeScope(jjtn002);
                            jjtc002 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte002 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte002;}
                          }
                          if (jjte002 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte002;}
                          }
                          {if (true) throw (Error)jjte002;}
      } finally {
                          if (jjtc002) {
                            jjtree.closeNodeScope(jjtn002, true);
                          }
      }
      break;
    case PARENTESISIZ:
      jj_consume_token(PARENTESISIZ);
      expresion();
      jj_consume_token(PARENTESISDE);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

        /* Regla ajena a la gramatica para tratar identificadores de tipos complejos */
  static final public void identifier() throws ParseException {
         /*@bgen(jjtree) Identifier */
                NodeIdentifier jjtn000 = new NodeIdentifier(JJTIDENTIFIER);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);Token t;
                Node selector, aux;
    try {
      t = jj_consume_token(ID);
                        jjtn000.jjtSetValue(t.image);
                        aux = jjtn000;
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CORCHETEIZ:
        case PUNTO:
          ;
          break;
        default:
          jj_la1[25] = jj_gen;
          break label_12;
        }
        selector();
                                selector = jjtree.popNode();
                                aux.jjtAddChild(selector,0);
                                aux = selector;
      }
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

        /* Regla 38 */
  static final public void selector() throws ParseException {
         /*@bgen(jjtree) Selector */
                NodeSelector jjtn000 = new NodeSelector(JJTSELECTOR);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CORCHETEIZ:
        jj_consume_token(CORCHETEIZ);
        expresion();
                         jjtn000.jjtSetValue(jjtree.popNode());
        jj_consume_token(CORCHETEDE);
        break;
      case PUNTO:
        jj_consume_token(PUNTO);
        t = jj_consume_token(ID);
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
                         jjtn000.jjtSetValue(t.image);
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
                          if (jjtc000) {
                            jjtree.clearNodeScope(jjtn000);
                            jjtc000 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte000 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte000;}
                          }
                          if (jjte000 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte000;}
                          }
                          {if (true) throw (Error)jjte000;}
    } finally {
                          if (jjtc000) {
                            jjtree.closeNodeScope(jjtn000, true);
                          }
    }
  }

        /* Regla 40 */
  static final public void constante() throws ParseException {
         /*@bgen(jjtree) Constant */
  NodeConstant jjtn000 = new NodeConstant(JJTCONSTANT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUMA:
      case RESTA:
        signo();
        break;
      default:
        jj_la1[27] = jj_gen;
        ;
      }
      cteSinSigno();
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

        /* Regla 41 */
  static final public void cteSinSigno() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      jj_consume_token(ID);
      break;
    case CTE:
      jj_consume_token(CTE);
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

        /* Regla 42 */
  static final public void opRel() throws ParseException {
         /*@bgen(jjtree) opRel */
  NodeopRel jjtn000 = new NodeopRel(JJTOPREL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAYOR:
        jj_consume_token(MAYOR);
                                          jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
                                         jjtn000.value = ">";
        break;
      case MAYORIG:
        jj_consume_token(MAYORIG);
                                          jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
                                   jjtn000.value = ">=";
        break;
      case MENOR:
        jj_consume_token(MENOR);
                                          jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
                                         jjtn000.value = "<";
        break;
      case MENORIG:
        jj_consume_token(MENORIG);
                                          jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
                                   jjtn000.value = "<=";
        break;
      case IGUAL:
        jj_consume_token(IGUAL);
                                          jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
                                         jjtn000.value = "=";
        break;
      case DESIGUAL:
        jj_consume_token(DESIGUAL);
                                          jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
                                    jjtn000.value = "<>";
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
                          if (jjtc000) {
                            jjtree.closeNodeScope(jjtn000, true);
                          }
    }
  }

        /* Regla 43 */
  static final public void opAdt() throws ParseException {
         /*@bgen(jjtree) opAdt */
  NodeopAdt jjtn000 = new NodeopAdt(JJTOPADT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUMA:
        jj_consume_token(SUMA);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                 jjtn000.value = "+";
        break;
      case RESTA:
        jj_consume_token(RESTA);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
                                 jjtn000.value = "-";
        break;
      case OR:
        jj_consume_token(OR);
                                  jjtree.closeNodeScope(jjtn000, true);
                                  jjtc000 = false;
